# atar

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
