[package]
name = "atar"
version = "0.1.19"
edition = "2024"
authors = ["Andrea Reni <mail@x71c9.com>"]
description = "Ephemeral Terraform runner: applies on start, auto-destroys on exit or failure."
license = "MIT OR Apache-2.0"
repository = "https://github.com/x71c9/atar"
readme = "README.md"
keywords = [
  "cli",
  "terraform",
  "ephemeral",
]
categories = [
  "command-line-utilities",
  "development-tools"
]

[package.metadata.deb]
depends = []

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
sha2 = "0.10"
signal-hook = "0.3"

[[bin]]
name = "atar"
path = "src/main.rs"
